--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.9.7"
