--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "clean-webpack-plugin": "^0.1.17",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "babel-core": "^6.17.0",
+    "babel-polyfill": "^6.16.0"
   }
 }
